Documented the API using swagger.
